src/scss/common/ui.scss
/* ... */
textarea {
    display: block;
}
a {
    color: inherit;
}
th {
    text-align: left;
    font-weight: inherit;
}
address {
    font-style: normal;
}
[data-spoiler] {
    cursor: pointer;
}
* {
    &::before,
    &::after {
        pointer-events: none;
    }
}
[class*="__input"] {
    transition: border-color 0.15s;
    &[aria-invalid="true"] {
        border-color: red;
    }
}
[class*="__field"] {
    position: relative;
    &:focus-within {
        &::before {
            content: "";
            position: absolute;
            outline: 2px solid rgba(#ffee00, 0.5);
            border-radius: 10px;
            top: 0px;
            left: -10px;
            bottom: 0px;
            right: -10px;
        }
    }
}
::selection {
    background-color: #fcf37a;
    color: $darkBlue;
}
.breadcrumbs {
    @include flex-center;
    flex-wrap: wrap;
    color: #fff;
    font-size: 10px;
    line-height: 1.4;
    &__list-item {
        // outline: 1px solid yellow;
        gap: 5px;
        padding-left: 5px;
        @include flex-center;
        &:first-child {
            .breadcrumbs__link {
                display: flex;
                align-items: center;
                gap: 5px;
                &::before {
                    content: "\e905";
                    font-size: 10px;
                    @extend %ic;
                    margin-bottom: 3px;
                }
            }
        }
        &:not(:last-child) {
            &::after {
                content: "\e906";
                font-size: 5px;
                @extend %ic;
                margin-bottom: 2px;
            }
        }
        &:last-child {
            opacity: 0.5;
            padding-left: 5px;
        }
    }
    &__link {
        // padding: 0 8px;
        // outline: 2px solid red;
    }
}
._error-list {
    text-align: left;
    margin-left: 11px;
    color: #f55;
    font-weight: 700;
    opacity: 0;
    min-height: 1em * 1.2;
    line-height: 1.2;
    transition: all 0.3s;
    margin-top: 2px;
    @include avalue("font-size", 16, 10);
    @media (max-width: $smallPhone + px) {
        margin-left: 9px;
    }
    li {
    }
    &--visible {
        opacity: 1;
    }
}
._light-button {
    @extend %button;
    color: $lightBlue;
    background-color: #fff;
}
._dark-button {
    @extend %button;
    background: linear-gradient(75.62deg, #009ee2 7.02%, #273992 91.67%);
    color: #fff;
}

%fabric {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    z-index: -2;
    transform: translate(-50%, 10%);
    background: center top no-repeat url(../../img/about-us/fabric.png);
    @media (min-width: $maxWidth + 1+ px) {
        background-size: cover;
    }
}
%button {
    // height: 60px; // 25
    font-family: Raleway;
    line-height: math.div(19, 16);
    font-weight: 700;
    @include abetweenvalue("font-size", 16, 10, $phone, 8);
    @include abetweenvalue("padding-top", 24, 13, $phone, 10);
    @include abetweenvalue("padding-bottom", 24, 13, $phone, 10);
    @include abetweenvalue("padding-left", 70, 25, $phone, 20);
    @include abetweenvalue("padding-right", 70, 25, $phone, 20);
    border-radius: 60px;
    text-transform: uppercase;
    z-index: 2;
}
._arrow-button {
    text-transform: uppercase;
    color: $darkBlue;
    font-weight: 700;
    @include aminvalue("font-size", 16, 12, $phone);
    position: relative;
    display: flex;
    align-items: center;
    @media (max-width: $phone + px) {
        font-size: 10px;
    }
    span {
        margin-left: -10px;
    }
    &::before {
        content: "\e900";
        @include aminvalue("font-size", 34, 20, $phone);
        @include aminvalue("height", 98, 58, $phone);
        @include aminvalue("width", 98, 58, $phone);
        border-radius: 50%;
        @extend %ic;
        @include flex-center;
        background: center / contain no-repeat url(../../img/incomplete-circle.png);
        @media (max-width: $phone + px) {
            @include size(50);
            font-size: 17px;
        }
    }
}
._no-arrow-button {
    text-transform: uppercase;
    color: $darkBlue;
    font-weight: 700;
    @include aminvalue("font-size", 16, 12, $phone);
    position: relative;
    display: flex;
    align-items: center;
    align-self: end;
    font-size: 12px;
    gap: 10px;
    &::before {
        content: "\e900";
        display: block;
        font-size: 19px;
        @include size(21);
        border-radius: 50%;
        @extend %ic;
        @media (max-width: $phone + px) {
        }
    }
}
.menu {
    &__list {
        display: flex;
        flex-wrap: wrap;
        gap: 15px 25px;
        font-size: 13px;
        line-height: math.div(15, 13);
        text-transform: uppercase;
    }
    &__link {
        transition: color 0.3s, border-color 0.3s;
    }
}
.social-list {
    display: flex;
    column-gap: 7px;
    @extend %ic;
    // .social-list__link
    &__link {
        font-size: 11px;
        line-height: 1;
        @include size(28);
        flex: 0 0 28px;
        @include flex-center;
        border: 1px solid;
        border-radius: 50%;
        transition: color 0.3s;
    }
}
[class*="__text-list-item"] {
    position: relative;
    margin-left: 15px;
    &::before {
        content: "";
        @include size(6);
        position: absolute;
        left: 0;
        top: 5px;
        margin-left: -15px;
        border-radius: 50%;
        background-color: #e1e1e1;
    }
    &:not(:last-child) {
        margin-bottom: 10px;
    }
}
/* ... */

